--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
         }
 
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="app.js"></script>
 </head>
 
 <body>
