--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="validationApp">
 <head>
     <meta charset="UTF-8"/>
     <title>Form validation problem</title>
@@ -150,8 +150,8 @@
     <script src="app.js"></script>
 </head>
 
-<body>
-    <form method='post' action=''>
+<body ng-controller="FormController as formCtrl">
+    <form method='post' action='' name="userForm">
         <h1>Fill out this awesome form</h1>
         <fieldset>
             <h3>Your details</h3>
@@ -159,13 +159,17 @@
                 <label class='label' for='email'>
                     Email
                 </label>
-                <input type='text' id='email' name='email'>
+                <input type='email' id='email' name='email' ng-model="formCtrl.data.email" required emailaddress>
+                <span ng-show="formCtrl.isSubmitted && userForm.email.$error.required"><br />Please enter an email address</span>
+                <span ng-show="formCtrl.isSubmitted && userForm.email.$error.emailaddress"><br />That is not a valid email address</span>
             </p>
             <p>
                 <label class='label' for='password'>
                     Password
                 </label>
-                <input class='error' type='password' id='password' name='username'>
+                <input class='error' type='password' id='password' name='password' ng-model="formCtrl.data.password" required ng-minlength="8">
+                <span ng-show="formCtrl.isSubmitted && userForm.password.$error.required"><br />Please enter a password</span>
+                <span ng-show="formCtrl.isSubmitted && userForm.password.$error.minlength"><br />Password must be at least 8 characters</span>
             </p>
         </fieldset>
 
@@ -175,7 +179,7 @@
                 <label class='label' for='colour'>
                     Colour
                 </label>
-                <select name='colour' id='colour'>
+                <select name='colour' id='colour' ng-model="formCtrl.data.colour" required>
                     <option value=''>Choose colour</option>
                     <option value='blue'>Blue</option>
                     <option value='green'>Green</option>
@@ -183,43 +187,48 @@
                     <option value='black'>Black</option>
                     <option value='brown'>Brown</option>
                 </select>
+
+                <span ng-show="formCtrl.isSubmitted && userForm.colour.$error.required"><br />Please select a colour</span>
             </p>
             <p>
                 <span class="label">
                     Animal
                 </span>
 
-                <input type='checkbox' name='animal' value='bear' id='bear'>
+                <input type='checkbox' name='animal' id='bear' ng-model="formCtrl.data.animals.bear" ng-model-options="{allowInvalid: true}" twoanimals>
                 <label for='bear'>
                      Bear
                 </label>
 
-                <input type='checkbox' name='animal' value='tiger' id='tiger'>
+                <input type='checkbox' name='animal' id='tiger' ng-model="formCtrl.data.animals.tiger" ng-model-options="{allowInvalid: true}" twoanimals>
                 <label for='tiger'>
                     Tiger
                 </label>
 
-                <input type='checkbox' name='animal' value='snake' id='snake'>
+                <input type='checkbox' name='animal' id='snake' ng-model="formCtrl.data.animals.snake" ng-model-options="{allowInvalid: true}" twoanimals>
                 <label for='snake'>
                      Snake
                 </label>
 
-                <input type='checkbox' name='animal' value='donkey' id='donkey'>
+                <input type='checkbox' name='animal' id='donkey' ng-model="formCtrl.data.animals.donkey" ng-model-options="{allowInvalid: true}" twoanimals>
                 <label for='donkey'>
                      Donkey
                 </label>
 
+                <span ng-show="formCtrl.isSubmitted && formCtrl.errors.animals"><br />Please select at least two animals</span>
             </p>
             <p>
                 <label class='label' for='tiger_type'>
                     Type of tiger
                 </label>
-                <input type='text' name='tiger_type' id='tiger_type'>
+                <input type='text' name='tiger_type' id='tiger_type' ng-model="formCtrl.data.tigerType" istigertype>
+
+                <span ng-show="formCtrl.isSubmitted && userForm.tiger_type.$error.istigertype"><br />Please enter an animal type</span>
             </p>
         </fieldset>
         <fieldset>
             <p>
-                <input type='submit' value='Create account'>
+                <input type='submit' value='Create account' ng-click="formCtrl.submitForm()">
             </p>
         </fieldset>
     </form>
